--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "mongoose": "^5.9.9",
     "uuid": "^3.3.2",
     "winston": "^3.2.1"
   },
@@ -37,6 +38,7 @@
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.0.40",
     "@types/koa__cors": "^2.2.3",
+    "@types/mongoose": "^5.7.12",
     "@types/uuid": "^3.4.5",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
