--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "http-status-codes": "^1.3.2",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-jwt": "^3.6.0",
     "koa-router": "^7.4.0",
     "mongoose": "^5.9.9",
     "uuid": "^3.3.2",
